refactor: restructure validators and provide feedback msg with each response
